# 900Word

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  deny.toml  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  governance-audit.yml  package-test.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.svelte  app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: documentInspector.test.ts  documentInspector.ts  documentProjection.test.ts  documentProjection.ts  documentStats.test.ts  (+18 more)
crates/word-core/: Cargo.toml
crates/word-core/src/: lib.rs
crates/word-docx/: Cargo.toml
crates/word-docx/src/: lib.rs
crates/word-export/: Cargo.toml
crates/word-export/src/: lib.rs
crates/word-fixtures/: Cargo.toml
crates/word-fixtures/examples/: generate_compatibility_artifacts.rs
crates/word-fixtures/fixtures/: generated-multilingual.json
crates/word-fixtures/src/: lib.rs
crates/word-odf/: Cargo.toml
crates/word-odf/src/: lib.rs
crates/word-spell/: Cargo.toml
crates/word-spell/src/: lib.rs
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  COMPATIBILITY_TESTING.md  FILE_FORMATS.md  FILE_FORMAT_SECURITY.md  I18N.md  PERFORMANCE_BUDGET.md  PRIVACY.md  PRIVACY_MODEL.md  PUBLIC_RELEASE.md  QUALITY_GATE.md  README.md  RELEASE.md  ROADMAP.md  SPRINT_PROCESS.md  THREAT_MODEL.md
docs/adr/: 001-license-gpl-3-or-later.md  002-tauri-svelte-rust.md  003-word-core-source-of-truth.md  004-odt-mvp-subset.md  005-import-export-strategy.md  006-pdf-export-strategy.md  007-fonts-and-dictionaries.md  008-no-telemetry.md  009-encryption-deferred.md  010-sync-collaboration-deferred.md  011-plugin-runtime-deferred.md  012-platform-performance-budget.md
docs/sprints/: sprint-000-governance-bootstrap.md  sprint-001-runnable-shell-workspace.md  sprint-002-core-model-editor-projection.md  sprint-003-odt-mvp-round-trip.md  sprint-004-local-file-workflows.md  sprint-005-editing-completeness.md  sprint-006-language-tools.md  sprint-007-export-print.md  sprint-008-release-hardening.md  sprint-009-authoring-foundation.md  sprint-010-authoring-polish.md  sprint-011-structure-media-links.md  sprint-012-editable-tables.md  sprint-013-page-fields.md  sprint-014-image-insertion.md  sprint-015-image-polish.md  sprint-016-bookmarks-internal-links.md  sprint-017-table-structure-editing.md  sprint-018-image-resize-ux.md  sprint-019-template-gallery.md  sprint-020-page-view-zoom.md  sprint-021-keyboard-shortcuts.md  sprint-022-comments-mvp.md  sprint-023-track-changes-mvp.md  sprint-024-table-of-contents-mvp.md  sprint-025-footnotes-endnotes-mvp.md  sprint-026-autocorrect-smart-typing.md  sprint-027-expanded-stats-panel.md  sprint-028-accessibility-low-resource-mode.md  sprint-029-recovery-snapshots.md  sprint-030-document-inspector.md  sprint-031-docx-compat-mvp.md  sprint-032-pdf-pagination-export-settings.md  sprint-033-docx-page-regions.md  sprint-034-docx-image-media.md  sprint-035-docx-comments.md  sprint-036-pdf-table-image-rendering.md  sprint-037-pdf-link-annotations.md  sprint-038-pdf-jpeg-image-embedding.md  sprint-039-docx-tracked-changes.md  (+31 more)
scripts/: check-bundle-size.sh  generate-sbom.mjs  performance-smoke.sh  scan-package-artifacts.mjs  verify-local.sh  verify-public-release.sh  verify-runtime-offline.sh
(+3 files in other folders)
