[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/word-core",
  "crates/word-odf",
  "crates/word-spell",
  "crates/word-export",
  "crates/word-fixtures",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "GPL-3.0-or-later"
authors = ["900 Labs"]
repository = "https://github.com/900Labs/900Word"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = "0.39"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tempfile = "3"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
