[package]
name = "word-fixtures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
serde_json.workspace = true
uuid.workspace = true
word-core = { path = "../word-core" }

[dev-dependencies]
word-docx = { path = "../word-docx" }
word-export = { path = "../word-export" }
word-odf = { path = "../word-odf" }
