[package]
name = "word-odf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
quick-xml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
word-core = { path = "../word-core" }
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
